2023-10-08T16:16:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6448688324 # 1967
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
* notice: last 14d: unq all: 16 93
* notice: prev accum: outdated-unq outdated-all / unq all: 390 1838 / 405 1929
* notice: next accum: outdated-unq outdated-all / unq all: 390 1838 / 406 1931
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2023-10-08]

2023-10-08T08:16:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6446478490 # 1966
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
* notice: last 14d: unq all: 15 91
* notice: prev accum: outdated-unq outdated-all / unq all: 390 1838 / 404 1927
* notice: next accum: outdated-unq outdated-all / unq all: 390 1838 / 405 1929
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-08]

2023-10-07T16:16:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6442221019 # 1964
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
* notice: last 14d: unq all: 14 89
* notice: prev accum: outdated-unq outdated-all / unq all: 390 1838 / 404 1912
* notice: next accum: outdated-unq outdated-all / unq all: 390 1838 / 404 1927
* notice: prev exec diff / last date diff / accum: unq all: +0 +15 -0 -0 / +2 +19 -0 -0 / 2 19
* notice: removed / changed dates: [] / [2023-10-07]

2023-10-07T08:16:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6440025329 # 1963