@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2023-10-10T08:18:46Z",
+  "count" : 33,
+  "count_minmax" : [ 33, 33 ],
+  "count_decinc" : [ -0, +33 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
