@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-08T16:16:40Z",
+  "timestamp" : "2023-10-10T08:18:46Z",
   "count_outdated" : 1838,
   "uniques_outdated" : 390,
-  "count" : 1931,
-  "uniques" : 406,
+  "count" : 1964,
+  "uniques" : 407,
   "views" : [
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-10T00:00:00Z",
+      "count": 33,
+      "count_minmax": [ 33, 33 ],
+      "count_decinc": [ 0, 33 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
