@@ -1,6 +1,6 @@
 {
-  "count": 93,
-  "uniques": 16,
+  "count": 126,
+  "uniques": 17,
   "views": [
     {
       "timestamp": "2023-09-26T00:00:00Z",
@@ -51,6 +51,11 @@
       "timestamp": "2023-10-08T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-10T00:00:00Z",
+      "count": 33,
+      "uniques": 1
     }
   ]
 }
